discover css, fix horizontal scroll

--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -259,19 +259,27 @@ footer p {
 /* DISCOVER */
 
 .first-header img {
-  width: 100%;
+  width: auto;
   position: relative;
+}
+
+.discover-header-p {
+  margin-right: 25px;
+  margin-left: 25px;
 }
 
 .discover-p {
   color: black;
-  font-size: 20px;
-  /* margin: 15px; */
+  font-size: 16px;
+  text-align: left;
+  margin: 25px;
 }
 
 .discover-h1 {
   color: black;
-  text-align: center;
+  text-align: left;
+  margin-top: 25px;
+  margin-left: 25px;
   /* text-shadow: 0px 0px 5px black; */
 }
 
@@ -287,8 +295,19 @@ footer p {
   text-shadow: 0px 0px 5px black;
 }
 
+.attractions-header {
+  text-align: center;
+}
+
+.picture-pictures {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 66%;
+}
+
 .pictures img {
-  width: 500px;
+  width: 250px;
 }
 
 /* join.html */
